# OniAi

./: .dockerignore  .env.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  PR_STATUS.md  README.md  SECURITY.md  VISION.md  docker-compose.yml  docker-setup.sh  docs.acp.md  fly.private.toml  fly.toml  oni.mjs  oni.podman.env  package.json  pnpm-workspace.yaml  render.yaml  setup-podman.sh  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
apps/onios/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/onios/tauri/src-tauri/src/: main.rs
docs/: api-quickstart-interactive.md  api-quickstart.md  brave-search.md  ci.md  date-time.md  docs.json  index.md  logging.md  network.md  openapi.yaml  perplexity.md  pi-dev.md  pi.md  prose.md  tts.md  vps.md
oniDocs/: server-deployment.md  system.md
scripts/: auth-monitor.sh  build-and-run-mac.sh  build_icon.sh  bundle-a2ui.sh  canvas-a2ui-copy.ts  changelog-to-html.sh  check-no-random-messaging-tmp.mjs  claude-auth-status.sh  clawlog.sh  codesign-mac-app.sh  create-dmg.sh  debug-claude-usage.ts  ios-configure-signing.sh  ios-team-id.sh  label-open-issues.ts  make_appcast.sh  mobile-reauth.sh  notarize-mac-artifact.sh  package-mac-app.sh  package-mac-dist.sh  protocol-gen-swift.ts  protocol-gen.ts  recover-orphaned-processes.sh  release-check.ts  restart-mac.sh  run-node.mjs  run-oni-podman.sh  sandbox-browser-entrypoint.sh  sandbox-browser-setup.sh  sandbox-common-setup.sh  sandbox-setup.sh  setup-auth-system.sh  sync-plugin-versions.ts  termux-auth-widget.sh  termux-quick-auth.sh  (+13 more)
(+2945 files in other folders)
